docs: add documentation for List openings
